--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,18 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 23
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.bethena.mediafilefinder"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 16
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        jackOptions{
+            enabled = true
+        }
     }
     buildTypes {
         release {
@@ -16,23 +20,27 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support:support-v4:26.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:23.+'
+    compile 'com.android.support:design:23.+'
+    compile 'com.android.support:support-v4:23.+'
 
-    implementation 'com.jakewharton.timber:timber:4.7.1'
 
-    implementation "io.reactivex.rxjava2:rxjava:2.2.1"
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    compile 'com.jakewharton.timber:timber:4.7.1'
 
-    implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
+    compile "io.reactivex.rxjava2:rxjava:2.0.1"
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    compile 'com.yqritc:recyclerview-flexibledivider:1.4.0'
+
+    compile 'com.github.bumptech.glide:glide:3.6.1'
 
 }
