--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -31,15 +30,12 @@
 
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities=".fileProvider"
+            android:authorities="com.bethena.mediafilefinder.fileProvider"
             android:grantUriPermissions="true"
             android:exported="false">
-
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-
                 android:resource="@xml/file_paths"/>
-
         </provider>
     </application>
 
